demo/src/main/java/com/example/demo/error/ErrorCode.java
package com.example.demo.error;

public interface ErrorCode {

    int getCode();

    String getMessage();
}
